--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
     </head>
     <body>
+        <p id="top-panel">Highscore: <span id="highscore"></span></p>
         <div id="app">
             <h1>Who quoted this?</h1>
             <div id="quote-area">
