--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>Score: <span id="score">0</span></p>
         </div>
         <div class="modal" style="display: none" id="history-modal">
-            <button id='hide-history' onClick='hideHistory()'>Close</button>
+            <a class="modal-close" href="#" id='hide-history' onClick='hideHistory()'>Close</a>
             <h1>History</h1>
             <div id="history-list"></div>
         </div>
