--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Who Quoted This?</title>
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="bower_components/wikiquotes-api/wikiquote-api.js"></script>
         <script src="quotes.js"></script>
