Style changes (mobile)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button class="option" id="option1">Option 1</button>
                 <button class="option" id="option2">Option 2</button>
             </div>
-            <p>Score: <span id="score">0</span></p>
+            <p>Score<br><span id="score">0</span></p>
         </div>
         <div class="modal" style="display: none" id="history-modal">
             <a class="modal-close" href="#" id='hide-history' onClick='hideHistory()'>Close</a>
