Style changes for mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span class="top-panel top-panel-left">Highscore: <span id="highscore"></span></span>
         <span class="top-panel top-panel-right"><a href="#" id="show-history" onClick="showHistory()">Previous Quotes</a></span>
         <div id="app" onClick="hideHistory()">
-            <h1>Who quoted this?</h1>
+            <h1 id="game-title">Who quoted this?</h1>
             <div id="quote-area">
                 <p>
                     <i class="fa fa-quote-left" aria-hidden="true"></i>
